# messenger

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  PLAN.md  README.md  Shuttle.toml  render.yaml
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/: api.ts  crypto.ts  keysync.ts  main.ts
migrations/: 0001_auth.sql  0002_chat.sql  0003_e2ee.sql  0004_attachments.sql  0005_retention.sql
src/: api.rs  attachments.rs  auth.rs  chat.rs  keys.rs  limit.rs  main.rs  ws.rs
static/: app.js  index.html  manifest.webmanifest  style.css
