[package]
name = "messenger"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
serde_json = "1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
